Expose API and default registration module.

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "css-modules-require-hook": "^1.0.4",
+    "lodash.merge": "^3.3.2",
     "postcss": "^4.1.16",
     "postcss-modules-extract-imports": "0.0.5",
     "postcss-modules-local-by-default": "0.0.12",
