--- a/package.json
+++ b/package.json
@@ -26,10 +26,16 @@
   "homepage": "https://github.com/kenpowers/css-modules-electron#readme",
   "devDependencies": {
     "auto-plug": "^1.1.0",
-    "babel-core": "^5.8.23",
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.18.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-object-rest-spread": "^6.16.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-register": "^6.18.0",
     "del": "^1.2.1",
     "gulp": "^3.9.0",
-    "gulp-babel": "^5.2.1",
+    "gulp-babel": "^6.1.2",
     "gulp-cached": "^1.1.0",
     "gulp-run-electron": "^1.2.1",
     "in-publish": "^2.0.0",
