--- a/package.json
+++ b/package.json
@@ -25,28 +25,30 @@
   },
   "homepage": "https://github.com/kenpowers/css-modules-electron#readme",
   "devDependencies": {
-    "auto-plug": "^1.1.0",
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.18.0",
+    "auto-plug": "^1.2.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-object-rest-spread": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
-    "babel-register": "^6.18.0",
+    "babel-register": "^6.26.0",
     "del": "^1.2.1",
-    "gulp": "^3.9.0",
-    "gulp-babel": "^6.1.2",
-    "gulp-cached": "^1.1.0",
-    "gulp-run-electron": "^1.2.1",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.0",
+    "gulp-cached": "^1.1.1",
+    "gulp-run-electron": "^3.0.1",
     "in-publish": "^2.0.0",
-    "postcss": "^4.1.16",
-    "postcss-modules-extract-imports": "0.0.5",
-    "postcss-modules-local-by-default": "0.0.12",
-    "postcss-modules-scope": "0.0.8",
-    "react": "^0.13.3"
+    "postcss": "^6.0.0",
+    "postcss-modules-extract-imports": "^1.1.0",
+    "postcss-modules-local-by-default": "^1.2.0",
+    "postcss-modules-scope": "^1.1.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   },
   "dependencies": {
-    "css-modules-require-hook": "^1.0.10",
-    "postcss-url": "^4.0.1"
+    "css-modules-require-hook": "^4.2.2",
+    "electron": "^1.7.9",
+    "postcss-url": "^7.1.2"
   }
 }
